upd: fixed alignment of progressbar

--- a/src/index.css
+++ b/src/index.css
@@ -82,48 +82,43 @@
 }
 
 @font-face {
-  font-family: 'DMMono';
-  src: url('./assets/fonts/DMMono-Regular.ttf') format('truetype');
+  font-family: "DMMono";
+  src: url("./assets/fonts/DMMono-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'DMMono';
-  src: url('./assets/fonts/DMMono-Italic.ttf') format('truetype');
+  font-family: "DMMono";
+  src: url("./assets/fonts/DMMono-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'DMMono';
-  src: url('./assets/fonts/DMMono-Light.ttf') format('truetype');
+  font-family: "DMMono";
+  src: url("./assets/fonts/DMMono-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'DMMono';
-  src: url('./assets/fonts/DMMono-LightItalic.ttf') format('truetype');
+  font-family: "DMMono";
+  src: url("./assets/fonts/DMMono-LightItalic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'DMMono';
-  src: url('./assets/fonts/DMMono-Medium.ttf') format('truetype');
+  font-family: "DMMono";
+  src: url("./assets/fonts/DMMono-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'DMMono';
-  src: url('./assets/fonts/DMMono-MediumItalic.ttf') format('truetype');
+  font-family: "DMMono";
+  src: url("./assets/fonts/DMMono-MediumItalic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic;
-}
-
-/* Prevent layout shifts by reserving scrollbar space */
-html {
-  overflow-y: scroll;
 }
